formation/03-gui-elements/extras/default_helm-controller__ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: helm-controller
  namespace: default
spec:
  endpointSelector:
    matchExpressions:
    - key: helmcharts.helm.cattle.io/chart
      operator: Exists
  egress:
  - toEntities:
    - kube-apiserver
  - toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
